--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /grafana_webpack-6.1.4.tar.gz
 /grafana-6.1.6.tar.gz
 /grafana_webpack-6.1.6.tar.gz
+/grafana-6.2.2.tar.gz
+/grafana_webpack-6.2.2.tar.gz
