Update to latest upstream sources v6.3.6

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /grafana_webpack-6.2.2.tar.gz
 /grafana-6.3.5.tar.gz
 /grafana_webpack-6.3.5.tar.gz
+/grafana-6.3.6.tar.gz
+/grafana_webpack-6.3.6.tar.gz
