--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /grafana_webpack-6.3.5.tar.gz
 /grafana-6.3.6.tar.gz
 /grafana_webpack-6.3.6.tar.gz
+/grafana-6.6.2.tar.gz
+/grafana_webpack-6.6.2.tar.gz
