--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,2 @@
-/grafana-6.1.4.tar.gz
-/grafana_webpack-6.1.4.tar.gz
-/grafana-6.1.6.tar.gz
-/grafana_webpack-6.1.6.tar.gz
-/grafana-6.2.2.tar.gz
-/grafana_webpack-6.2.2.tar.gz
-/grafana-6.3.5.tar.gz
-/grafana_webpack-6.3.5.tar.gz
-/grafana-6.3.6.tar.gz
-/grafana_webpack-6.3.6.tar.gz
-/grafana-6.6.2.tar.gz
-/grafana_webpack-6.6.2.tar.gz
+/grafana-*.tar.gz
+/grafana_webpack-*.tar.gz
