--- a/distro-defaults.ini
+++ b/distro-defaults.ini
@@ -769,7 +769,7 @@ disable_sanitize_html = false
 enable_alpha = false
 app_tls_skip_verify_insecure = false
 # Enter a comma-separated list of plugin identifiers to identify plugins that are allowed to be loaded even if they lack a valid signature.
-allow_loading_unsigned_plugins =
+allow_loading_unsigned_plugins = pcp-redis-datasource
 marketplace_url = https://grafana.com/grafana/plugins/
 
 #################################### Grafana Image Renderer Plugin ##########################
