use clamp-mtime when generating the vendor and webpack tarballs
and round tarball mtime timestamp to midnight, to match SOURCE_DATE_EPOCH

--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Create bundles
         run: |
           ./create_bundles_in_container.sh
-          sha512sum *.tar.gz *.tar.xz > SHA512SUMS
+          sha512sum *.tar.gz *.tar.xz | tee SHA512SUMS
 
       - name: Upload bundles
         uses: actions/upload-artifact@v3
